objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>After_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Require_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Due_Date__c</fullName>
        <label>Target Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>URL_for_PECN_use__c</fullName>
        <label>URL (for PECN use)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_ItemcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predefined_Implementation_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predefined Implementation Plan</label>
        <referenceTo>Predefined_Implementation_Plan__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Item</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Action Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>limit_action_items_to_10000</fullName>
        <active>true</active>
        <description>You can not have more than 10,000 Action Item records related to one Change Control</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  Change_Control__r.Action_Item_Records__c = 10000</errorConditionFormula>
        <errorMessage>You can not have more than 10,000 Action Item records related to one Change Control</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCmustbeOpenstatustocancelaction</fullName>
        <active>true</active>
        <description>Parent Change Control must be in Open status to cancel the Action Item</description>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp;
CMPL123_WF_Action__c =="Cancel" &amp;&amp;

 Change_Control__r.CMPL123_WF_Status__c &lt;&gt; "Open"</errorConditionFormula>
        <errorMessage>Parent Change Control must be in Open status to cancel the Action Item</errorMessage>
    </validationRules>
</CustomObject>